# signals

./: .gitignore  README.md  build.bat  execute_tests.bat  pyproject.toml
signals/: __init__.py  _run_tests.py  _signals.py  factory.py
signals/tests/: test_factory.py  test_signals.py
