[project]
name = "signals"
version = "0.0.2"
authors = [{name="MountainEclilpse", email="none-provided@none-provided.com"}]
description = "Signal-and-slot system for asynchronous event processing"
readme = "README.md"
requires-python = ">3.9.12"
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
               "Operating System :: OS Independent"]

[project.urls]
Homepage = "https://github.com/MountainEclipse"
Issues = "https://github.com/MountainEclipse"

[build-system]
requires = ["setuptools>=61.2.0"]
build-backend = "setuptools.build_meta"